Add id fields to clustering.ipynb cells to match test.ipynb structure

--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -9,7 +9,8 @@
    },
    "source": [
     "# 고객 클러스터링"
-   ]
+   ],
+   "id": "c0c4c6a8-cd4c-4e2e-89ae-6d9df54ad413"
   },
   {
    "cell_type": "markdown",
@@ -20,14 +21,15 @@
    },
    "source": [
     "  1. 조건 및 파라미터 설정"
-   ]
+   ],
+   "id": "13e0b6c3-8826-4b25-a7f2-dad9901ddbc8"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
@@ -36,20 +38,22 @@
     "dict_args['cluster_count'] = list(range(2, 11))",
     "dict_args['base_file'] = 'OnlineRetail.csv'",
     "dict_args['min_cluster_size'] = 30"
-   ]
+   ],
+   "id": "cb858f0b-563d-43f6-ad9a-f62bcc2e992a"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "dict_args"
-   ]
+   ],
+   "id": "4962e984-9702-4e4c-9fdc-f76a1f86cc2d"
   },
   {
    "cell_type": "markdown",
@@ -60,14 +64,15 @@
    },
    "source": [
     "  2. 샘플용 데이터 로딩"
-   ]
+   ],
+   "id": "3c00b565-4f79-4b24-a544-25ec9e7c34d2"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [
@@ -82,20 +87,22 @@
     "import pandas as pd",
     "df = pd.read_csv(dict_args['base_file'], encoding = 'cp1252')",
     "display(df)"
-   ]
+   ],
+   "id": "cf973759-e145-4b57-b6ef-8ab5ac11815f"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "df.info()"
-   ]
+   ],
+   "id": "6d9b281b-13f7-41eb-ba62-fec88db03567"
   },
   {
    "cell_type": "markdown",
@@ -106,14 +113,15 @@
    },
    "source": [
     "  3. 데이터 전처리"
-   ]
+   ],
+   "id": "bdf13794-4193-4f33-b05c-5bfc50e54edd"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
@@ -127,14 +135,15 @@
     "df_source['Amount'] = df_source['UnitPrice'] * df_source['Quantity']",
     "",
     "df_source['InvoiceDate'] = pd.to_datetime(df_source['InvoiceDate'], format = '%d-%m-%Y %H:%M')"
-   ]
+   ],
+   "id": "29107ebe-aef5-478a-8109-ad5526a47d03"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [
@@ -147,7 +156,8 @@
    ],
    "source": [
     "df_source.head()"
-   ]
+   ],
+   "id": "74babe65-2f6f-4148-83fe-35d2b2902976"
   },
   {
    "cell_type": "markdown",
@@ -158,7 +168,8 @@
    },
    "source": [
     "고객 클러스터링을 해야하는데 마땅한 수치형 변수가 Quantity UnitPrice 곱한 파생변수 Amount랑 Quantity, UnitPrice 밖에 없음.."
-   ]
+   ],
+   "id": "16e53255-83f8-496c-ba91-e0e7a916598e"
   },
   {
    "cell_type": "markdown",
@@ -169,14 +180,15 @@
    },
    "source": [
     "R, F, M 기준의 수치형 변수를 생성"
-   ]
+   ],
+   "id": "0b32e736-dcc2-4e7c-a7f8-432edc94d9a8"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [
@@ -207,7 +219,8 @@
     "",
     "df_final = df_final[df_final.index != '-1']",
     "df_final.head()"
-   ]
+   ],
+   "id": "3aeaec6e-df7b-4a26-996d-f61fb74098d9"
   },
   {
    "cell_type": "markdown",
@@ -218,14 +231,15 @@
    },
    "source": [
     "RFM 방식으로 산출한 고객 클러스터링 실행"
-   ]
+   ],
+   "id": "68764c83-6d12-4e58-9f09-3bb9920a1e88"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [
@@ -253,27 +267,29 @@
     "scaler = StandardScaler()",
     "data_scaled = pd.DataFrame(scaler.fit_transform(df_base_cluster_source), columns = df_base_cluster_source.columns)",
     "data_scaled.head()"
-   ]
+   ],
+   "id": "aee90760-2732-46f8-8648-b5c1c0b6e781"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "data_scaled_copy = data_scaled.copy(deep = True)"
-   ]
+   ],
+   "id": "fe307d93-eced-473e-91c3-2a38af728ce4"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
@@ -306,7 +322,8 @@
     "plt.xlabel(\"Number of cluster\")",
     "plt.ylabel(\"Silhouette Score\")",
     "plt.show()"
-   ]
+   ],
+   "id": "33e21071-1c25-486a-be13-c35f04fef230"
   },
   {
    "cell_type": "markdown",
@@ -317,7 +334,8 @@
    },
    "source": [
     "k = 5 에서 실루엣 계수가 가장 높은것을 확인할 수 있음"
-   ]
+   ],
+   "id": "f10ac21e-aba6-4f44-bac5-cf573f30c45e"
   },
   {
    "cell_type": "markdown",
@@ -328,14 +346,15 @@
    },
    "source": [
     "<https://scikit-learn.org/stable/auto_examples/cluster/plot_kmeans_silhouette_analysis.html>"
-   ]
+   ],
+   "id": "66250e41-2f12-40b2-b918-0315c27d8a93"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
@@ -382,46 +401,50 @@
     "            y_lower = y_upper + 10",
     "",
     "        axs[ind].axvline(x=sil_avg, color=\"red\", linestyle=\"--\")"
-   ]
+   ],
+   "id": "e44f79b3-bf69-4696-b467-83a0a5c912ee"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "dict_args['cluster_count']"
-   ]
+   ],
+   "id": "04b2f6b2-cfe8-41df-a7db-4087c520b483"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "visualize_silouette(dict_args['cluster_count'][:4], data_scaled)"
-   ]
+   ],
+   "id": "7c5dac9b-4c59-4b25-958a-b7892d84241f"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "visualize_silouette(dict_args['cluster_count'][:4], data_scaled)"
-   ]
+   ],
+   "id": "4de7bad2-0a2b-44e2-a17e-2a4d741e7960"
   },
   {
    "cell_type": "markdown",
@@ -439,14 +462,15 @@
     "",
     "  * Sihouette score를 보면 5 일때 가장 높지만, 실루엣 계수가 음수인 데이터들이 존재함. -> 실루엣 계수가 음수이면 아에 다른 군집에 데이터가 할당됌",
     "  * Sihouette score 3 일때는 각 클러스터의 별로 실루엣 계수가 비교적 균일함."
-   ]
+   ],
+   "id": "cd45c95f-7da6-41a0-8e43-264714de3285"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
@@ -493,33 +517,36 @@
     "            y_lower = y_upper + 10",
     "",
     "        axs[ind].axvline(x=sil_avg, color=\"red\", linestyle=\"--\")"
-   ]
+   ],
+   "id": "16da7b59-01ad-4eed-b01b-e9fc5b670a81"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "visualize_silouette([3], data_scaled)"
-   ]
+   ],
+   "id": "9332c3c7-412a-44ae-811f-9ee9a2035c2a"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "vscode": {
-     "languageId": "python"
+     "languageId": "plaintext"
     }
    },
    "outputs": [],
    "source": [
     "visualize_silouette([3], data_scaled)"
-   ]
+   ],
+   "id": "f98e2956-6c81-4daa-9f6c-0822e9e4fb93"
   },
   {
    "cell_type": "markdown",
@@ -530,7 +557,8 @@
    },
    "source": [
     "군집 3으로 하여 0, 1, 2 로 나누는 것이 잘 나누어진 집단으로 보임"
-   ]
+   ],
+   "id": "91ebcfd6-b269-4f0e-8f94-3949645a7a63"
   }
  ],
  "metadata": {
